src/test/deca/syntax/valid/resultats/test23_class-lex.res
'class': [@0,247:251='class',<7>,14:0]
IDENT: [@1,253:253='A',<26>,14:6]
'{': [@2,255:255='{',<36>,14:8]
'}': [@3,257:257='}',<37>,15:0]
'class': [@4,260:264='class',<7>,17:0]
IDENT: [@5,266:266='B',<26>,17:6]
'extends': [@6,268:274='extends',<8>,17:8]
IDENT: [@7,276:276='A',<26>,17:16]
'{': [@8,278:278='{',<36>,17:18]
'}': [@9,280:280='}',<37>,18:0]
'class': [@10,283:287='class',<7>,20:0]
IDENT: [@11,289:289='C',<26>,20:6]
'{': [@12,291:291='{',<36>,20:8]
'}': [@13,293:293='}',<37>,21:0]
'class': [@14,296:300='class',<7>,23:0]
IDENT: [@15,302:302='D',<26>,23:6]
'extends': [@16,304:310='extends',<8>,23:8]
IDENT: [@17,312:312='B',<26>,23:16]
'{': [@18,314:314='{',<36>,23:18]
'}': [@19,316:316='}',<37>,24:0]
