src/test/deca/syntax/invalid/resultats/test36_class_decl-lex.res
'class': [@0,336:340='class',<7>,15:0]
'extends': [@1,342:348='extends',<8>,15:6]
IDENT: [@2,350:350='A',<26>,15:14]
'{': [@3,352:352='{',<36>,15:16]
'}': [@4,354:354='}',<37>,16:0]
